fixed an issue where wrong PlayerCommandResult was returend. also added result option to cover